# spoj

./: #%2Ascratch%2A#1724Cii#  .gitignore  README.md  makeProject.sh
ACPC10A/: CMakeCache.txt  Makefile  acpc10a_c  cmake_install.cmake  main.c
CANTON/: CMakeCache.txt  Makefile  canton_c  cmake_install.cmake  main.c
MARBLES/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  marbles_c  marbles_cpp
SHPATH/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  path.dot  shpath_c  shpath_cpp
add_chars/: CMakeCache.txt  CMakeLists.txt  Makefile  add_char  add_char_c  cmake_install.cmake  main.c  main.cpp
addrev/: CMakeCache.txt  CMakeLists.txt  Makefile  addrev  cmake_install.cmake  main.cpp
arith/: CMakeCache.txt  CMakeLists.txt  Makefile  arith  arith.py  arith_new.py  cmake_install.cmake  main.c  main.cpp  second.out
bitmap/: #%2Ascratch%2A#9387pOk#  100_testcases.out  100x100_testcase.out  10_testcases.out  143x144_solution.out  143x144_testcase.out  150x150_testcase.out  20_testcases.out  2_testcases.out  30_testcases.out  3_testcases.out  50x50_testcase.out  5_testcases.out  CMakeCache.txt  CMakeLists.txt  Makefile  bitmap.cpp  bitmap.go  bitmap2.cpp  bitmap_c  bitmap_cpp  bitmap_go  cmake_install.cmake  main.c  main.cpp  myCurrentTestCases.out  new_bitmap  new_bitmap2  new_testcases.out  output.out  results.out  testcases  testcases.cpp  testcases.out
candy/: candy.py
candy3/: candy.py  ipython
coins/: coins.py
divsum/: CMakeCache.txt  Makefile  cmake_install.cmake  divsum_c  divsum_cpp  main.c  test.in
fashion/: main.c  (+3 more)
(+103 files in other folders)
